# frontend-llvm

./: .clang-tidy  .gitignore  CMakeLists.txt  uncrustify.cfg
src/: compile.cpp  compile.hpp  macro.h  main.cpp
src/lexer/: lexer.cpp  lexer.hpp  lexerstate.cpp  lexerstate.hpp  struct.hpp
src/lexer/attempter/: attemptdigitliteral.cpp  attemptdigitliteral.hpp  attempter.hpp  attemptidentifier.cpp  attemptidentifier.hpp  attemptsymbol.cpp  attemptsymbol.hpp
src/lexer/tokens/: token.hpp  tokenidentifier.hpp  tokenkind.hpp  tokenliteral.hpp
src/parser/: binop.hpp  parser.cpp  parser.hpp
src/parser/AST/: binaryexpr.hpp  digitliteral.hpp  expr.hpp  function.hpp  type.hpp  variable.hpp
src/report/: report.cpp  report.hpp  sourcelocation.hpp
testfiles/: c_code.c  hi1.cp
